--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -19,6 +19,10 @@
   /*  border: 3px solid white; */
   border-radius: 15px;
   justify-items: center;
+  cursor: pointer;
+}
+.contenedor-card:hover {
+  transform: scale(1.2);
 }
 .contenedor-card img {
   width: 180px;
