--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -11,7 +11,7 @@
   display: grid;
   justify-content: center;
   margin-bottom: 2rem;
-  margin: 1rem;
+  margin: 2rem;
   padding-top: 0.4rem;
 
   /*   padding-left: 1.5rem;
@@ -23,10 +23,11 @@
 }
 .contenedor-card:hover {
   transform: scale(1.2);
+  border: none;
 }
 .contenedor-card img {
-  width: 180px;
-  height: 280px;
+  width: 220px;
+  height: 300px;
   border-radius: 10px;
 }
 .contenedor-card img:hover {
