--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -1,8 +1,13 @@
 .main {
   display: flex;
   flex-wrap: wrap;
-  margin-top: 4.5rem;
+  margin-top: 1rem;
   justify-content: center;
+  /*  background-color: rgb(78, 58, 138); */
+  background-color: rgb(70, 60, 175);
+  margin-right: 5%;
+  margin-left: 5%;
+  border-radius: 15px;
 }
 
 .contenedor-card {
@@ -10,29 +15,47 @@
   height: 20rem;
   display: grid;
   justify-content: center;
-  margin-bottom: 2rem;
-  margin: 2rem;
+  margin: 2rem 1.5rem 1.5rem 1.5rem;
   padding-top: 0.4rem;
-
-  /*   padding-left: 1.5rem;
-  padding-right: 1.5rem; */
-  /*  border: 3px solid white; */
   border-radius: 15px;
   justify-items: center;
   cursor: pointer;
 }
 .contenedor-card:hover {
   transform: scale(1.2);
-  border: none;
 }
 .contenedor-card img {
   width: 220px;
-  height: 300px;
+  height: 280px;
   border-radius: 10px;
+  border: 2px solid white;
 }
-.contenedor-card img:hover {
-  border: 4px solid white;
+.icono {
+  display: flex;
 }
+.contenedor-card img:hover + .contenedor-boton-play {
+  background-color: rgba(206, 34, 34, 0.699);
+  border: 2.5px solid white;
+  opacity: 1;
+}
+
+.contenedor-boton-play {
+  display: flex;
+  position: absolute;
+  align-self: center;
+  opacity: 0;
+  border-radius: 36px;
+}
+.contenedor-boton-play:hover {
+  background-color: rgba(43, 255, 0, 0.884);
+  opacity: 1;
+  border-radius: 36px;
+  border: 2.5px solid white;
+}
+.contenedor-boton-play:hover + .img_poster {
+  opacity: 0;
+}
+
 .title-year {
   display: flex;
   flex-direction: unset;
