--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -1,5 +1,7 @@
 .nav-bg {
-  background-color: #2c2e30;
+  /*  background-color: #2c2e30; */
+  /*   background-color: rgb(70, 60, 175); */
+  background-color: rgb(70, 60, 175);
   height: 4rem;
 }
 .nav-principal {
@@ -18,6 +20,7 @@
 .img:hover {
   transform: scale(1.1);
 }
+
 .search {
   display: flex;
   flex-direction: row;
