--- a/src/components/Movie.css
+++ b/src/components/Movie.css
@@ -1,7 +1,3 @@
-/* * {
-  margin: 0;
-  padding: 0;
-} */
 .tamaño {
   display: flex;
   flex-wrap: wrap;
@@ -10,34 +6,86 @@
   position: relative;
 }
 .img_fondo {
-  width: 100vw;
+  display: "flex";
+  justify-content: "center";
+  width: 100%;
   height: 70vh;
+  position: relative;
+  top: 0px;
+  object-fit: cover;
 }
-/* .tamaño:before {
-  content: "";
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background-color: rgba(0, 0, 0, 0.4); 
-} */
+
 .contenedor_info {
+  position: absolute;
+  top: 400px;
   display: flex;
-  flex-wrap: wrap;
-  background-color: rgba(19, 19, 20, 0.911);
-  margin-left: 2rem;
-  margin-right: 2rem;
-  margin-top: -120px;
-  border-radius: 15px;
+  flex-direction: column;
+  background-color: rgba(19, 19, 20, 0.993);
+  width: 90%;
+  border-radius: 25px;
 }
 .info {
   display: flex;
   flex-direction: row;
+  justify-content: center;
+  color: azure;
+  width: 100%;
+}
+.title_info {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 4rem;
+}
+.text_info {
+  display: flex;
+  flex-direction: column;
+  width: 68vw;
 }
 .img_info {
   margin: 1rem;
-  border-radius: 15px;
-  width: 28vw;
-  height: 35vw;
+  border-radius: 25px;
+  width: 280px;
+  height: 380px;
+  filter: brightness(120%);
+}
+
+.second_div_info {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+.three_div_info {
+  display: flex;
+  justify-content: center;
+  margin-left: 3.2vw;
+  margin-right: 1vw;
+}
+.first_column_info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-right: 2vw;
+  margin-left: 1vw;
+}
+.second_column_info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-right: 2vw;
+  margin-left: 2vw;
+}
+.three_column_info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-right: 2vw;
+  margin-left: 2vw;
+}
+.four_div_info {
+  display: flex;
+  justify-content: space-around;
+}
+
+.second_column_four_div {
+  color: beige;
 }
