--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -29,3 +29,9 @@
 .Nav-link {
   font-family: sans-serif;
 }
+
+@media only screen and (max-width: 630px) {
+  .contenedor_botones {
+    margin-top: 10vh;
+  }
+}
