--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -30,8 +30,8 @@
   font-family: sans-serif;
 }
 
-@media only screen and (max-width: 630px) {
+/* @media only screen and (max-width: 630px) {
   .contenedor_botones {
     margin-top: 10vh;
   }
-}
+} */
