--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -48,6 +48,9 @@
   .search {
     padding-left: 40vw;
   }
+  .img-titulo {
+    display: none;
+  }
 }
 
 /* @media only screen and (max-width: 630px) {
