--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -25,9 +25,10 @@
   text-decoration: none;
   justify-content: center;
   border: none;
+  font-family: "Krub", sans-serif;
 }
 .Nav-link {
-  font-family: sans-serif;
+  font-family: "Krub", sans-serif;
 }
 
 @media only screen and (max-width: 630px) {
