--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -4,7 +4,8 @@
   margin-top: 1rem;
   justify-content: center;
 
-  background-color: rgb(70, 60, 175);
+  background-color: #1a1d21;
+  /*   background-color: rgb(70, 60, 175); */
   margin-right: 5%;
   margin-left: 5%;
   border-radius: 15px;
