--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -25,7 +25,7 @@
   text-decoration: none;
   justify-content: center;
   border: none;
-  font-family: "Krub", sans-serif;
+  font-family: "Righteous", cursive;
 }
 .Nav-link {
   font-family: "Krub", sans-serif;
