--- a/src/components/Movie.css
+++ b/src/components/Movie.css
@@ -14,7 +14,9 @@
   top: 0px;
   object-fit: cover;
 }
-
+.contenedor_img {
+  height: 400px;
+}
 .contenedor_info {
   position: absolute;
   top: 400px;
@@ -30,6 +32,7 @@
   justify-content: center;
   color: azure;
   width: 100%;
+  font-family: "Montserrat", sans-serif;
 }
 .title_info {
   display: flex;
@@ -44,8 +47,8 @@
 .img_info {
   margin: 1rem;
   border-radius: 25px;
-  width: 280px;
-  height: 380px;
+  width: 320px;
+  height: 420px;
   filter: brightness(120%);
 }
 
@@ -93,4 +96,14 @@
   .contenedor_img img {
     display: none;
   }
+}
+.division {
+  background-color: white;
+  width: 100%;
+  height: 0.08px;
+  margin-top: 2rem;
+}
+.trailer {
+  display: flex;
+  justify-content: center;
 }
